--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <a href="https://www.instagram.com/f_22225?igsh=NmhuZmZsNXkzY3Nw&utm_source=q" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://snapchat.com/t/CyeIyZLZ" target="_blank"><i class="fa-brands fa-square-snapchat"></i></a>
     <a href="https://t.me/f22_221" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+    <a href="https://vk.com/falah2022" target="_blank"><i class="fa-brands fa-vk"></i></a>
 
 </div>
 
